--- a/src/en.lproj/ProjectTableViewCell.xib
+++ b/src/en.lproj/ProjectTableViewCell.xib
@@ -128,6 +128,7 @@
 				<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
 				<int key="IBUIAccessoryType">2</int>
 				<reference key="IBUIContentView" ref="995734919"/>
+				<string key="IBUIReuseIdentifier">ProjectTableViewCell</string>
 			</object>
 			<object class="IBProxyObject" id="372490531">
 				<string key="IBProxiedObjectIdentifier">IBFilesOwner</string>
